istiod mwc enableNamespacesByDefault should support custom namespaces

--- a/manifests/charts/istio-control/istio-discovery/templates/mutatingwebhook.yaml
+++ b/manifests/charts/istio-control/istio-discovery/templates/mutatingwebhook.yaml
@@ -37,10 +37,12 @@ webhooks:
     namespaceSelector:
 {{- if .Values.sidecarInjectorWebhook.enableNamespacesByDefault }}
       matchExpressions:
+      {{- if .Values.sidecarInjectorWebhook.excludeNamespaces }}
       - key: name
         operator: NotIn
         values:
-        - {{ .Release.Namespace }}
+        {{ toYaml .Values.sidecarInjectorWebhook.excludeNamespaces | indent 8 | trim }}
+      {{- end }}
       - key: istio-injection
         operator: NotIn
         values:
